Fix width issue on mobile.

--- a/src/components/DetailPage/_detailHeader.scss
+++ b/src/components/DetailPage/_detailHeader.scss
@@ -24,7 +24,7 @@
 			max-width: 500px;
 			position: relative;
 			top: 6rem;
-			width: 500px;
+			width: 100%;
 
 			.project--header-image {
 				max-width: 100%;
